# the_main_quest

./: .gitignore  README.md  init.sh  pyproject.toml
.opencode/skills/pending-tasks/: SKILL.md
knowledge_bank/: sp_breaking_scenarios.md  sp_data_file_schema.md  super_productivity_migration.md  todoist_api_exploration.md  todoist_snapshot_basic.md
migrations/: todoist_snapshot_schema.sql
runs/: fetch_pending_tasks.py  setup_postgres.py  todoist_snapshot_recurring.py  todoist_snapshot_regular.py
tests/todoist_fetch/: test_extraction.py  test_fetcher.py
the_main_quest/: agent.md  omniconf.py
the_main_quest/settings_file/: settings.toml
the_main_quest/todoist_snapshot/: _helpers.py  db.py  fetcher.py  main.py  recurring.py  regular.py
